--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bitly": "^7.1.2",
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
   }
